@startuml
'https://plantuml.com/class-diagram

interface FileSystemItem {
    + String getStringTreeFolder(String indent)
    + String getPath()
}

class File implements FileSystemItem {
    - String name
    - String creationDate
    - String parentPath
    + String getStringTreeFolder(String indent)
    + String getPath()
}

class Folder implements FileSystemItem {
    - String name
    - String creationDate
    - List<FileSystemItem> items
    - String parentPath
    + void addItem(FileSystemItem item)
    + void removeItem(FileSystemItem item)
    + String getStringTreeFolder(String indent)
    + String getPath()
}

FileSystemItem <|.. File
FileSystemItem <|.. Folder
Folder "1" *-- "0..*" FileSystemItem

@enduml